# ocaml-decimal

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.config/: toolchains.bazelrc
lib/: BUILD.bazel
test/: BUILD.bazel
