module(
    name = "ocaml-decimal",
    version = "0.1.0",
    compatibility_level = 0,
    bazel_compatibility = [">=6.0.0"]
)

## bcr deps:
bazel_dep(name = "platforms",    version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.4.2")

## obazl deps:
bazel_dep(name = "rules_ocaml",  version = "2.0.0")

# bazel_dep(name = "obazl", version = "1.0.0",
#           dev_dependency = True)

## local opam registry deps
bazel_dep(name = "ocaml",        version = "0.0.0")
register_toolchains("@ocaml//toolchain/selectors/local:all")
register_toolchains("@ocaml//toolchain/profiles:all")

bazel_dep(name = "zarith",            version = "0.0.0")

## dev/test deps
bazel_dep(name = "alcotest",          version = "0.0.0")
bazel_dep(name = "angstrom",          version = "0.0.0")
# bazel_dep(name = "angstrom-lwt-unix", version = "0.0.0")
# bazel_dep(name = "angstrom-unix",     version = "0.0.0")

